[tool.poetry]
name = "whimsy-painter.com"
version = "0.1.0"
description = ""
authors = ["snjssk <snjssk0403@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
